<resources>
    <string name="app_name">MVVMTodo</string>
    <string name="add_tasks_fab_content_description">Add New Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="important_task">Important Task</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date_created">Sort by Date Created</string>
    <string name="hide_completed">Hide Completed</string>
    <string name="delete_all_completed_tasks">Delete All Completed Tasks</string>
</resources>